--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,3 +3,7 @@ nose==1.3.4
 nose-watch==0.9.1
 nosexcover==1.0.10
 rednose==0.4.1
+Sphinx==1.2.3
+sphinx-autobuild==0.3.0
+sphinx-rtd-theme==0.1.6
+sphinxcontrib-napoleon==0.2.8
