Pre-commit fixes (pep stuff ec) added editorconfig and pre-commit-config, added pre-commit step to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ install:
   - "pip install -r requirements-dev.txt"
   - "pip install coveralls"
 script: "nosetests --with-coverage --cover-package importconfig tests"
+after_script: "pre-commit run --all-files"
 after_success:
   - coveralls
